# yadif

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
docs/: design_rationale.md  reference.md  reference_injector.md  reference_module.md  reference_provider.md  reference_scope.md  reference_singleton.md  tutorial.md
example/: CMakeLists.txt  yadif_hello_world.cpp
include/: yadif.hpp
include/yadif/: Annotation.hpp  Binder.hpp  Binding.hpp  BindingCreator.hpp  BindingStore.hpp  ConvertingSource.hpp  Injector.hpp  InstanceProvider.hpp  InstanceSource.hpp  Key.hpp  Module.hpp  Provider.hpp  ProvidingSource.hpp  ReferenceProvider.hpp  Scope.hpp  SingletonScope.hpp  index_sequence.hpp  type_traits.hpp  yadif_exception.hpp  yadif_version.hpp
scripts/: generateSingleHeader.py
single_header/: yadif.hpp
test/: CMakeLists.txt  annotation_test.cpp  binder_test.cpp  binder_with_eager_singleton_test.cpp  binding_store_test.cpp  binding_test.cpp  catch_main.cpp  clang_bug.cpp  index_sequence_test.cpp  injector_test.cpp  instance_provider_test.cpp  key_test.cpp  module_test.cpp  provider_test.cpp  providing_source_test.cpp  reference_provider_test.cpp  type_traits_test.cpp  yadif_basic_binding_test.cpp  yadif_eager_singleton_binding_test.cpp  yadif_mi_binding_test.cpp  yadif_singleton_binding_test.cpp
